@@ -5,6 +5,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -23,8 +24,8 @@ class LeetCode_450_deleteNodeTest {
 
     public static Stream<Arguments> generateRightCase() {
         return Stream.of(
-                arguments(TreeNode.build(List.of(5, 3, 6, 2, 4, null, 7)), 3, TreeNode.build(List.of(5, 4, 6, 2, null, null, 7))),
-                arguments(TreeNode.build(List.of(5, 3, 6, 2, 4, null, 7)), 0, TreeNode.build(List.of(5, 3, 6, 2, 4, null, 7))),
+                arguments(TreeNode.build(Arrays.asList(5, 3, 6, 2, 4, null, 7)), 3, TreeNode.build(Arrays.asList(5, 4, 6, 2, null, null, 7))),
+                arguments(TreeNode.build(Arrays.asList(5, 3, 6, 2, 4, null, 7)), 0, TreeNode.build(Arrays.asList(5, 3, 6, 2, 4, null, 7))),
                 arguments(TreeNode.build(List.of()), 0, TreeNode.build(List.of()))
         );
     }
